--- a/style.css
+++ b/style.css
@@ -6,7 +6,17 @@ Theme URI: https://github.com/sskhkr1993/portfolio
 Author: kuraki
 Author URI: 
 Tags: work
-License: GNU General Public License v3.0
-License URI: http://www.gnu.org/licenses/gpl-3.0.html
+License: GNU General Public License v2 or later
+License URI: http: //www.gnu.org/licenses/gpl-2.0.html
 Text Domain: portfolio
+Tested up to: 6.1.1
+Requires PHP: 8.1.9
+Text Domain: portfolio
+Domain Path: /languages
+
+This theme,
+like WordPress,
+is licensed under the GPL. Use it to make something cool,
+have fun,
+and share what you've learned with others.
 */
