--- a/scss/Object/Project/_block.scss
+++ b/scss/Object/Project/_block.scss
@@ -51,6 +51,10 @@
       line-height: 1.75rem;
     }
 
+    &--contact {
+      margin-bottom: 3rem;
+    }
+
     &--page,
     &--thanks,
     &--error {
